layout bug with nav on new reservation page added.

--- a/app/public/css/home.css
+++ b/app/public/css/home.css
@@ -576,7 +576,7 @@ h1{
             min-height: 230px;
             padding: 1rem 1rem 2rem;
             width: 85%;
-            margin: 4rem auto 2rem;
+            margin: 4rem auto 1rem;
             box-shadow: rgba(186, 143, 186, 0.35) 0px 5px 15px;
       }
             .form > .data-title{
